<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_item_quiz"
            android:icon="@drawable/ic_questions_24dp"
            android:title="@string/quiz_menu_item" />

        <item
            android:id="@+id/menu_item_settings"
            android:icon="@drawable/ic_settings_24dp"
            android:title="@string/settings_menu_item" />

        <item
            android:id="@+id/menu_item_stats"
            android:icon="@drawable/ic_sort_black_24dp"
            android:title="@string/stats_menu_item" />

        <item
            android:id="@+id/menu_item_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about_menu_item" />
        <item
            android:id="@+id/menu_item_privacy"
            android:icon="@drawable/ic_fingerprint_black_24dp"
            android:title="@string/privacy_menu_item" />
    </group>
</menu>
