<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical"
            tools:context="com.b4kancs.scoutlaws.views.start.StartActivity">

            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar" />

            <ListView
                android:id="@+id/list_laws"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="4dp"
                android:footerDividersEnabled="false"
                android:background="@color/white"/>
        </LinearLayout>

        <!-- The navigation drawer that comes in from the left -->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white"
            app:headerLayout="@layout/nav_header"
            app:menu="@menu/drawer_view" />
    </androidx.drawerlayout.widget.DrawerLayout>
</layout>