...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey"
        tools:context="com.b4kancs.scoutlaws.views.quiz.chooser.ChooserFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_chooser"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
...
                    android:textColor="@color/colorTextLight"
                    app:colorPrimaryOrLight="@{true}"
                    app:textShadow="@{true}"
                    tools:text="Any" />

                <Button
                    android:id="@+id/button_multiple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/multiple_quiz"
                    android:textColor="@color/colorTextLight"
...
